<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_favorite">

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.notnotions.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.example.notnotions.ui.main.MainFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_generator"
        android:name="com.example.notnotions.ui.generator.GeneratorFragment"
        android:label="@string/title_generator"
        tools:layout="@layout/fragment_generator" />
</navigation>