<?xml version="1.0" encoding="utf-8"?>
    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        app:layout_anchor="@id/collapsingToolbar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_not_favorite_24"
        android:backgroundTint="#FF9800"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="130dp"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/purple_500"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/NewElement"
            app:titleCentered="true" />

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/materialToolbar"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:title="@string/ElementName" >

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/ElementName"
                android:textColorHint="#FFFF"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textSize="32sp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="20dp"
                android:textColor="#FFFF"
                android:background="@android:color/transparent"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" >

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UserName"
            android:paddingTop="20dp"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:paddingEnd="30dp"/>

        <EditText
            android:id="@+id/newElementLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/UserName"
            android:textSize="24sp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:paddingStart="5dp"
            android:paddingEnd="0dp" />


        <TextView
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:paddingTop="20dp"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"/>

        <EditText
            android:id="@+id/newElementPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:textSize="24sp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"/>

        <Button
            android:id="@+id/newElementButtonGenerate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GenerateButton" />

        <TextView
            android:id="@+id/textSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Site"
            android:paddingTop="20dp"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"/>

        <EditText
            android:id="@+id/newElementSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/URL"
            android:textSize="24sp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newElementNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Note" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>