<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        app:layout_anchor="@id/collapsingToolbar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_not_favorite_24"
        android:backgroundTint="#FF9800"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="75dp"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/purple_500"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleCentered="true" />

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/materialToolbar"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:title="@string/newElementLabel" >

            <TextView
                android:id="@+id/ElementLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/newElementLabel"
                android:textColorHint="#FFFF"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textSize="32sp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="20dp"
                android:textColor="#FFFF"
                android:background="@android:color/transparent"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" >

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UserName"
            android:paddingTop="20dp"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:paddingEnd="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ElementLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:editable="false"
                android:textSize="24sp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:background="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:paddingTop="20dp"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ElementPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:editable="false"
                android:textSize="24sp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:textIsSelectable="true"
                android:background="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Site"
            android:paddingTop="20dp"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"/>

        <TextView
            android:id="@+id/ElementSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24sp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:autoLink="web"
            android:textIsSelectable="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <MultiAutoCompleteTextView
                android:id="@+id/ElementNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:editable="false" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>